--- a/AngularApp/projects/diagnostic-data/src/lib/components/checker-list/checker-list.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/checker-list/checker-list.component.scss
@@ -1,4 +1,4 @@
-.check-container {
+.check-content {
     padding-left: 15px;
 }
 
@@ -9,29 +9,33 @@
 }
 
 .check-markdown .markdown-header{
-    position: absolute;
     margin-left: -10px;
 }
 
 .check-markdown .markdown-title{
     margin-left: 35px;
-    margin-top: -26px;
     font-size: 18px;
     font-weight: bold;
+    margin-top: -26px;
 } 
 
 .check-markdown .markdown-container{
     max-width: 800px;
     min-width: 300px;
-    padding-top: 30px;
+    padding-top: 5px;
+    margin-left: -5px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    white-space: break-spaces;
 }
 
 .check-markdown .status-icon{
-    margin-top: 3px;
+    margin-top: 15px;
 }
-.check-markdown .markdown-separator{
+.panel-separator{
     border-bottom: 1px solid #cccccc;
     border-bottom-style: inset;
+    margin-left: -10px;
 }
 
 .check-header {
@@ -129,4 +133,3 @@
     font-size: 14px; 
     margin-bottom: 15px;
 }
-
