--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
@@ -15,7 +15,7 @@
             Which of following best describes your situation?
             <ul>
                 <li><a [routerLink]="['./']">I have a VNet integration plan, but failed to configure</a></li>
-                <li><a [routerLink]="['./']">I have needs of private network, I want to know what options do I have.</a></li>
+                <li><a [routerLink]="['./']">I have a need to connect my app to private network, I want to know what options do I have.</a></li>
             </ul>
         </ng-template>
         
