Modify emerging issue panel title

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
@@ -8,7 +8,7 @@
           <div
             style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end"
             tabindex="0" aria-label="Availability risk alerts">
-            {{riskPanelTitle}} risk alerts</div>
+            {{riskPanelTitle}}</div>
         </div>
       </div>
     </div>
