--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="showEmergingNotification">
   <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true"
-    [styles]="styles" overflowButtonAriaLabel="See more">{{_riskAlertService.emergingNotificationMessageBar.title}} <a
+    [styles]="styles" overflowButtonAriaLabel="See more">{{_riskAlertService.emergingNotificationMessageBar.notificationMessage}} <a
       (click)="openRiskAlertsPanel(_riskAlertService.emergingNotificationMessageBar.id)">View more details</a>.
   </fab-message-bar>
 </ng-container>
