--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/risk-tile/risk-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/risk-tile/risk-tile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showTile" (click)="clickTileHandler()" class="risk-tile">
+<div (click)="clickTileHandler()" class="risk-tile">
   <div class="risk-tile-container" tabindex="0" role="button" (keyup.enter)="clickTileHandler()">
     <h3 class="risk-title risk-section">{{title}}</h3>
     <div class="risk-section" *ngIf="loading != LoadingStatus.Loading else loadingPlaceHolder">
