framework refactor basically done

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/check-step-view/check-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/check-step-view/check-step.component.html
@@ -1,4 +1,4 @@
-<div class="check-step">
+<div class="check-step step">
     <div class="status-icon">
         <status-icon [loading]="1" [status]="status" [size]="20"></status-icon>
     </div>
