--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.scss
@@ -1,4 +1,14 @@
 .container {
     height: 85vh;
+    min-width: 500px;
+    width: 80%;
+    max-width: 750px;
 }
 
+.step-container{
+    padding: 7px;
+}
+
+.step{
+    border: 1px solid #e5e5e5;
+}
