Fix null reference in autohealing rules (#1069)
* Fix null reference in autohealing rules

* Fix null reference

--- a/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-slowrequests-rule/autohealing-slowrequests-rule.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-slowrequests-rule/autohealing-slowrequests-rule.component.html
@@ -61,7 +61,7 @@
     </tbody>
   </table>
 
-  <div *ngIf="editMode" class="form-group">
+  <div *ngIf="editMode && currentRule!=null" class="form-group">
     <div class="row">
       <div class="col-sm-6">
         <label for="requestsCountSlow">After how many slow requests you want this condition to kick in?</label>
