--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
@@ -1,12 +1,12 @@
-<div class="container">
-    <h2 tabindex="0">{{ title }}</h2>
-    <p tabindex="0">{{ description }}</p>
-    
-    <div class="step-container" *ngFor="let viewModel of stepViews" [ngSwitch]="viewModel.stepView.type">
-        <dropdown-step *ngSwitchCase="1" [viewModel]="viewModel"></dropdown-step>
-        <check-step *ngSwitchCase="2" [viewModel]="viewModel"></check-step>
-        <info-step *ngSwitchCase="4" [viewModel]="viewModel"></info-step>
+<div class="network-checking-tool">
+    <div class="container">
+        <h2 tabindex="0">{{ title }}</h2>
+        <p tabindex="0">{{ description }}</p>
+        <div class="step-container" *ngFor="let viewModel of stepViews" [ngSwitch]="viewModel.stepView.type">
+            <dropdown-step *ngSwitchCase="1" [viewModel]="viewModel"></dropdown-step>
+            <check-step *ngSwitchCase="2" [viewModel]="viewModel"></check-step>
+            <input-step *ngSwitchCase="3" [viewModel]="viewModel"></input-step>
+            <info-step *ngSwitchCase="4" [viewModel]="viewModel"></info-step>
+        </div>
     </div>
-
-
 </div>
