--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.scss
@@ -1,5 +1,10 @@
+.network-checking-tool{
+    position: fixed;
+    height: calc(100vh - 35px);
+    width: calc(100vw - 298px);
+    overflow-y: scroll;
+}
 .container {
-    height: 85vh;
     min-width: 500px;
     width: 80%;
     max-width: 750px;
