--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
@@ -8,5 +8,12 @@
             <input-step *ngSwitchCase="3" [viewModel]="viewModel"></input-step>
             <info-step *ngSwitchCase="4" [viewModel]="viewModel"></info-step>
         </div>
+        <div class="loading-spin" *ngIf="stepFlowManager.loadingView && stepFlowManager.loadingView.loadingText != null">
+            <i class="fa fa-circle-o-notch fa-spin"></i>
+            <div class="loading-text">{{stepFlowManager.loadingView.loadingText}}</div>
+        </div>
+        
     </div>
 </div>
+
+<networkcheck-feedback [openFeedback]="openFeedback"></networkcheck-feedback>
