--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.html
@@ -1,8 +1,12 @@
 <div class="input-step step">
     <p class="input-step-title">{{inputStepView.title}}</p>
     <div class="input-section">
+        <div class="input-entry">
+            {{inputStepView.entry}}
+            <a class="input-tooltip" title="{{inputStepView.tooltip}}" *ngIf="inputStepView.tooltip">?</a>
+        </div>
         <input class="input-box" placeholder="{{inputStepView.placeholder}}" #text>
-        <a class="input-tooltip" title="{{inputStepView.tooltip}}" *ngIf="inputStepView.tooltip">?</a>
+        
     </div>
     <fab-primary-button class="input-check-button" (click)="inputStepView.callback(text.value)">
         {{inputStepView.buttonText}}
