--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.html
@@ -6,7 +6,7 @@
             <a class="input-tooltip" title="{{inputStepView.tooltip}}" *ngIf="inputStepView.tooltip">?</a>
         </div>
         <input class="input-box" placeholder="{{inputStepView.placeholder}}" #text>
-        
+        <div class="input-error">{{inputStepView.error || " "}}</div>
     </div>
     <fab-primary-button class="input-check-button" (click)="inputStepView.callback(text.value)">
         {{inputStepView.buttonText}}
