--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/step-views/input-step-view/input-step.component.scss
@@ -17,6 +17,12 @@
         width: 225px;
         margin-top: -2px;
         margin-left: 35px;
+        float: left;
+    }
+
+    .input-error{
+        margin-left: 320px;
+        color: red;
     }
 }
 
