--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks-firstpage/network-checks-firstpage.component.html
@@ -1,4 +1,4 @@
-<div class="network-checking-tool">
+<div class="network-checking-tool" #networkCheckingTool>
     <div class="container">
         <h2 tabindex="0">{{ title }}</h2>
         <p tabindex="0">{{ description }}</p>
