reorganize the files

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
@@ -4,6 +4,7 @@
     width: calc(100vw - 298px);
     min-width: 550px;
     overflow-y: scroll;
+    padding-bottom: 20px;
 }
 .container {
     min-width: 500px;
