accessibility and support center integration done

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
@@ -2,7 +2,7 @@
     <div class="status-icon">
         <status-icon [loading]="1" [status]="status" [size]="20"></status-icon>
     </div>
-    <div class="check-title">
+    <div class="check-title" tabindex="0">
       {{checkStepView.title}}
     </div>
 </div>
