--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.html
@@ -1,7 +1,7 @@
 <div class="input-step step">
-    <p class="input-step-title">{{inputStepView.title}}</p>
+    <p class="input-step-title" tabindex="0">{{inputStepView.title}}</p>
     <div class="input-section">
-        <div class="input-entry">
+        <div class="input-entry" tabindex="0">
             {{inputStepView.entry}}
             <a class="input-tooltip" title="{{inputStepView.tooltip}}" *ngIf="inputStepView.tooltip">?</a>
         </div>
