--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.html
@@ -1,8 +1,19 @@
 <div class="check-step step">
     <div class="status-icon">
-        <status-icon [loading]="1" [status]="status" [size]="20"></status-icon>
+        <status-icon [loading]="1" [status]="checkStepView.status" [size]="20"></status-icon>
     </div>
     <div class="check-title" tabindex="0">
       {{checkStepView.title}}
+    </div>
+    <div *ngIf="checkStepView.subChecks.length>0"> <a (click)="toggleSubChecks()"> {{expanded ? "collapse":"expand"}} </a></div>
+    <div class="subchecks-container" *ngIf="expanded">
+      <div *ngFor="let subCheck of checkStepView.subChecks">
+        <div class="status-icon">
+          <status-icon [loading]="1" [status]="subCheck.status" [size]="16"></status-icon>
+        </div>
+        <div class="check-title" tabindex="0">
+          {{subCheck.title}}
+        </div>
+      </div>
     </div>
 </div>
