--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.scss
@@ -1,5 +1,5 @@
 .check-step{
-    padding: 10px 0px 10px 10px;
+    padding: 9px 0px 9px 10px;
 }
 
 .status-icon {
@@ -8,6 +8,13 @@
     padding-left: 1px;
     width: 70px;
     height: 100%;
+    .fa{
+        font-size: 20px !important;
+    }
+
+    .fa-exclamation-triangle{
+        margin-left: -2px;
+    }
 }
 
 .check-title{
