--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/check-step-view/check-step.component.scss
@@ -1,5 +1,23 @@
 .check-step{
     padding: 9px 0px 9px 10px;
+
+    .check-title{
+        font-size: 14px;
+        margin-top: -20px;
+        margin-left: 30px;
+    }
+    
+    .bold{
+        font-weight: 500;
+    }
+
+    .subchecks-container{
+        padding-left: 25px;
+        .sub-check{
+            padding-top: 10px;
+        }
+    }
+    
 }
 
 .status-icon {
@@ -23,16 +41,4 @@
     padding-right: 15px;
 }
 
-.subchecks-container{
-    padding-left: 10px;
-    .sub-check{
-        padding-top: 10px;
-    }
-}
 
-.check-title{
-    font-size: 14px;
-    margin-top: -20px;
-    font-weight: 500;
-    margin-left: 30px;
-}
