Accessibility diag tools (#1095)
* Fixing 1726 and 1720

* Fix for 9584705

* Fix for 9584781

--- a/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-slowrequests-rule/autohealing-slowrequests-rule.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/auto-healing/autohealing-slowrequests-rule/autohealing-slowrequests-rule.component.html
@@ -4,7 +4,7 @@
   a rule to mitigate the issue or collect diagnostic data to identify the root cause of the problem.
 
   <div class="rule-button">
-    <button type="button" class="btn btn-primary btn-sm" (click)="addNewRule()">
+    <button #addRuleButton type="button" class="btn btn-primary btn-sm" (click)="addNewRule()">
       Add Slow Request rule
     </button>
   </div>
@@ -36,8 +36,8 @@
             name="editRuleSlowRequest">
             <i class="fa fa-edit"></i>
           </button>
-          <button role="button" class="image-btn" *ngIf="!editMode" (click)="deleteSingeRule()" title="Delete rule"
-            name="deleteRuleSlowRequest">
+          <button role="button" class="image-btn" *ngIf="!editMode" (click)="deleteSingleRule();addRuleButton.focus()"
+            title="Delete rule" name="deleteRuleSlowRequest">
             <i class="fa fa-trash"></i>
           </button>
         </td>
@@ -52,8 +52,8 @@
             name="editRuleSlowRequestRange">
             <i class="fa fa-edit"></i>
           </button>
-          <button role="button" class="image-btn" *ngIf="!editMode" (click)="deleteSlowRequestRule(i)"
-            title="Delete rule" name="deleteRuleSlowRequest">
+          <button role="button" class="image-btn" *ngIf="!editMode"
+            (click)="deleteSlowRequestRule(i);addRuleButton.focus()" title="Delete rule" name="deleteRuleSlowRequest">
             <i class="fa fa-trash"></i>
           </button>
         </td>
@@ -70,7 +70,7 @@
         <input aria-required="true" type="number" id="requestsCountSlow" placeholder="Enter count"
           [(ngModel)]="currentRule.count" min="1" max="4294967295">
         <span style="color:red">*</span>
-        <div *ngIf="currentRule.count <=0" class="alert alert-danger" style="margin-top:5px">
+        <div *ngIf="currentRule.count <=0" class="alert alert-danger" role="alert" style="margin-top:5px" role="alert">
           Request count should be more than zero
         </div>
       </div>
@@ -92,9 +92,6 @@
       </div>
       <div class="col-sm-4">
         <timespan ControlId="durationSlow" [(timeSpan)]="currentRule.timeInterval" placeholder="e.g. 300"></timespan>
-        <div *ngIf="showIntervalRecommendation" class="alert alert-danger" style="margin-top:5px">
-          It is recommended that the time interval is higher than the minimum duration setting.
-        </div>
       </div>
     </div>
     <div class="row">
@@ -104,15 +101,21 @@
       <div class="col-sm-4">
         <input type="text" aria-required="false" id="requestPath" placeholder="e.g. /default*.aspx"
           [(ngModel)]="currentRule.path">
-          <div *ngIf="!isValidUrlPattern(currentRule.path)" class="alert alert-danger" style="margin-top:5px">
-            Path can contain letters, alphabets, asterisk, dashes, period, underscore and forward slashes only
-          </div>
+        <div *ngIf="!isValidUrlPattern(currentRule.path)" class="alert alert-danger" role="alert" style="margin-top:5px"
+          role="alert">
+          Path can contain letters, alphabets, asterisk, dashes, period, underscore and forward slashes only
+        </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-sm-4">
-        <button type="button" class="btn btn-primary btn-sm" [disabled]="!isValid()" (click)="saveRule()">Ok</button>
+      <div class="col-sm-6">
+        <div *ngIf="showIntervalRecommendation" class="alert alert-danger" role="alert" style="margin-top:5px"
+          role="alert">
+          Time interval should be higher than the minimum duration setting.
+        </div>
+        <button type="button" class="btn btn-primary btn-sm" [disabled]="!isValid()"
+          (click)="saveRule();addRuleButton.focus()">Ok</button>
       </div>
     </div>
   </div>
