error handling and level convert

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
@@ -2,15 +2,25 @@
     <div class="container">
         <h2 tabindex="0">{{ title }}</h2>
         <p tabindex="0">{{ description }}</p>
-        <div class="step-container" *ngFor="let viewModel of stepViews" [ngSwitch]="viewModel.stepView.type">
-            <dropdown-step *ngSwitchCase="0" [viewModel]="viewModel"></dropdown-step>
-            <check-step *ngSwitchCase="1" [viewModel]="viewModel"></check-step>
-            <input-step *ngSwitchCase="2" [viewModel]="viewModel"></input-step>
-            <info-step *ngSwitchCase="3" [viewModel]="viewModel"></info-step>
+        <div *ngFor="let viewModel of stepViews" >
+            <div class="step-container" *ngIf="!viewModel.stepView.hidden" [ngSwitch]="viewModel.stepView.type">
+                <dropdown-step *ngSwitchCase="0" [viewModel]="viewModel"></dropdown-step>
+                <check-step *ngSwitchCase="1" [viewModel]="viewModel"></check-step>
+                <input-step *ngSwitchCase="2" [viewModel]="viewModel"></input-step>
+                <info-step *ngSwitchCase="3" [viewModel]="viewModel"></info-step>
+            </div>
         </div>
         <div class="loading-spin" *ngIf="stepFlowManager.loadingView && stepFlowManager.loadingView.loadingText != null">
             <i class="fa fa-circle-o-notch fa-spin"></i>
             <div class="loading-text" tabindex="0">{{stepFlowManager.loadingView.loadingText}}</div>
+        </div>
+        <div *ngIf="stepFlowManager.errorMsg" class="error-section">
+            <div class="error-message">
+                {{stepFlowManager.errorMsg}}
+            </div>
+            <div class="error-detail">
+                <div class="markdown" tabindex="0"><markdown ngPreserveWhitespaces [data]=stepFlowManager.errorDetailMarkdown></markdown></div>
+            </div>
         </div>
         
     </div>
