--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/risk-tile/risk-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/risk-tile/risk-tile.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="risk-section">
-      <a tabindex="0">{{linkText}}</a>
+      <a>{{linkText}}</a>
     </div>
   </div>
 </div>
