--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-tile-v4/category-tile-v4.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-tile-v4/category-tile-v4.component.html
@@ -8,7 +8,7 @@
       <h3 class="tile-title">{{category.name}}</h3>
       <p class="tile-description">{{category.description}}</p>
       <p class="tile-keywords">Ex: {{keywords}}</p>
-      <a tabindex="0">Troubleshoot</a>
+      <a>Troubleshoot</a>
     </div>
   </div>
 </div>
