--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
@@ -24,6 +24,14 @@
     .fa-spin{
         font-size: 18px;
     }
+
+    .ms-Spinner{
+        align-items: unset;
+        margin-left: -3px;
+    }
+    
+
+
     .loading-text{
         margin-top: -20px;
         margin-left: 25px;
