--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/info-step-view/info-step.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/info-step-view/info-step.component.scss
@@ -31,8 +31,9 @@
 .markdown-title{
     margin-top: -25px;
     margin-left: 40px;
+    position: absolute;
 }
 
 .markdown-container{
-    padding: 12px 12px 0px 12px;
+    padding: 13px 13px 0px 13px;
 }
