--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/input-step-view/input-step.component.scss
@@ -2,10 +2,6 @@
     padding-top: 10px;
     padding-bottom: 5px;
 
-    .input-entry{
-        float: left;
-    }
-
     .input-tooltip{
         margin-top: 2px;
         position: absolute;
@@ -13,26 +9,38 @@
     }
 
     .input-box{
+        position: absolute;
         width: 225px;
-        margin-top: -2px;
-        margin-left: 35px;
-        float: left;
+        margin-top: -20px;
+        margin-left: 200px;
     }
 
     .input-error{
-        margin-left: 320px;
+        margin-left: 200px;
         color: red;
+        margin-top: 12px;
+    }
+
+    .input-error-icon{
+        margin-right: 4px;
+        margin-top: 3px;
+        float: left;
     }
 }
 
 .input-check-button{
     margin-left: -1px;
-    padding-top: 14px;
-    
+
     .ms-Button{
         height: 28px;
+        margin-top: -10px;
         width: fit-content;
         border-radius: 2px;
+    }
+
+    .ms-Button-flexContainer{
+        font-size: 13px;
+        font-weight: 500;
     }
 }
 
