resolve PR comments and UI improvements

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
@@ -8,6 +8,11 @@
     min-width: 500px;
     width: 80%;
     max-width: 750px;
+    .error-section{
+        .error-message{
+            color: red;
+        }
+    }
 }
 
 .step-container{
