--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/dropdown-step-view/dropdown-step.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/step-views/dropdown-step-view/dropdown-step.component.html
@@ -1,5 +1,5 @@
 <div class="dropdown-step{{dropdownStepView.bordered?' bordered':''}}">
-    <p tabindex="0" class="view-description">{{ dropdownStepView.description }}</p>
+    <p class="view-description">{{ dropdownStepView.description }}</p>
     <div class="dropdown-container" *ngFor="let dropdown of dropdownStepView.dropdowns; index as i">
         <p class="description" *ngIf="dropdown.description">{{ dropdown.description }}</p>
         <fab-dropdown [componentRef]="dropdownRef" (onLoad)="onload()" (onChange)="onChange($event, i)" [disabled]="dropdownOptions[i].length==1" [options]="dropdownOptions[i]" [defaultSelectedKey]="null" contentStyle="width:{{dropdownStepView.width}};"></fab-dropdown>
